Add incident detail to notification

--- a/etc/watchman.conf
+++ b/etc/watchman.conf
@@ -1,10 +1,10 @@
 [database]
-db_name=WatchmanAlerting
+db_name=watchman_alerting
 driver=mysql
 host=localhost
 port= 3306
 socket=/var/lib/mysql/mysql.sock
-user=watchman
+user=root
 pass=
 debug=
 
@@ -24,3 +24,8 @@ iodevice_queue=iodevice_queue
 iodevice_exchange=
 
 [gpio]
+
+[notifications]
+recip=a
+recip=b
+recip=c
